<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Sellers.SellerRegistrationActivity">

    <ImageView
        android:id="@+id/img_seller"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:src="@drawable/seller"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/title_seller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activitySellerRegistration_titleSeller_text"
        android:gravity="center"
        android:layout_below="@+id/img_seller"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_dark"
        />


    <EditText
        android:id="@+id/seller_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/title_seller"
        android:hint="@string/activitySellerRegistration_sellerName_hint"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/seller_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_name"
        android:hint="@string/activitySellerRegistration_sellerPhone_hint"
        android:inputType="number"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/seller_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_phone"
        android:hint="@string/activitySellerRegistration_sellerEmail_hint"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/seller_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_email"
        android:hint="@string/activitySellerRegistration_sellerAddress_hint"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/seller_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/seller_address"
        android:hint="@string/activitySellerRegistration_sellerPassword_hint"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        />


    <Button
        android:id="@+id/seller_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/seller_password"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/activitySellerRegistration_sellerRegisterBtn_text"
        android:textAllCaps="false"
        android:textSize="16sp"

        />


    <Button
        android:id="@+id/seller_already_have_account_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_green_light"
        android:text="@string/activitySellerRegistration_sellerAlreadyHaveAccountBtn_text"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="15dp"
        />


</RelativeLayout>