<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:layout_margin="10dp"
        android:background="@color/textHeading">

        <TextView
            android:id="@+id/order_user_name"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:text="@string/ordersLayout_orderUserName_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/order_phone_number"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:gravity="right"
            android:textAlignment="gravity"
            android:text="@string/ordersLayout_orderPhoneNumber_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_alignParentRight="true" />

        <TextView
            android:id="@+id/order_total_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordersLayout_orderTotalPrice_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="25dp"
            />

        <TextView
            android:id="@+id/order_address_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordersLayout_orderAddressCity_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_total_price"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/order_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordersLayout_orderDateTime_text"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:layout_marginLeft="5sp"
            android:layout_marginStart="5sp"
            android:textStyle="bold"
            android:layout_below="@+id/order_address_city"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />

        <Button
            android:id="@+id/show_all_products_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/ordersLayout_showAllProductsBtn_text"
            android:textSize="18sp"
            android:background="@color/white"
            android:textColor="@color/colorPrimaryDark"
            android:layout_below="@+id/order_date_time"
            />


    </RelativeLayout>

</RelativeLayout>